[package]
name = "wifi-config"
version = "0.1.0"
edition = "2021"
authors = ["Andrii Tverdyi <andrii.tv@proton.me>"]
description = "Library + CLI for configuring Wi-Fi via NetworkManager over D-Bus"
license = "MIT"
repository = "https://github.com/ATverdyi/wifi-config"
readme = "README.md"
keywords = ["wifi", "dbus", "networkmanager", "linux"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
dbus = "0.9.7"
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["full"] }
